[package]
name = "embassy-rp-examples"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-executor = {version = "0.8.0", features = ["arch-cortex-m", "executor-thread", "executor-interrupt"]}
embassy-rp = {version = "0.7.0", features = ["unstable-pac", "time-driver", "critical-section-impl", "rp2040"]}
embassy-time = "0.4.0"
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = "1.0.0"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
